# Barbican

./: .gitignore  ACKNOWLEDGEMENTS.md  AUDITOR_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NIST_800_53_CONTROL_RESEARCH.md  README.md  SECURITY.md  flake.nix  result
.cargo/: audit.toml
.claude/: DOCUMENTATION_DIRECTIVE.md  REFACTORING_DIRECTIVE.md
.claude/commands/: audit.md
.claudedocs/: COMPLIANCE_ARTIFACT_IMPLEMENTATION_PLAN.md  COMPLIANCE_TEST_COVERAGE_GAP_ANALYSIS.md  DECEMBER_2025_UPDATE_SUMMARY.md  FEDRAMP_HIGH_AUDIT_SUMMARY.md  NIST_800_53_COMPLIANCE_ANALYSIS.md  NIST_800_53_CROSSWALK.md  NIST_800_53_IMPLEMENTATION_GUIDE.md  NIST_CONTROL_AUDIT.md  OAUTH_INTEGRATION.md  PROPOSAL_SSRF_PROTECTION.md  README.md  SC13_CRYPTOGRAPHIC_PROTECTION_AUDIT.md  SECURITY_CONTROL_REGISTRY.md
audit-reports/: EXECUTIVE_SUMMARY_2025-12-18.md  compliance-audit-2025-12-18-final.md  compliance-audit-2025-12-18-update.md  compliance-audit-2025-12-18.md  fedramp-high-executive-summary.md  fedramp-high-gap-analysis.md  fedramp-high-remediation-plan.md
compliance-artifacts/: compliance_report_2025-12-17T23-16-56Z.json  compliance_report_2025-12-17T23-17-01Z.json  compliance_report_2025-12-17T23-21-21Z.json  compliance_report_2025-12-18T21-46-39Z.json  compliance_report_2025-12-18T22-46-42Z.json  compliance_report_2025-12-18T23-00-48Z.json  compliance_report_2025-12-18T23-28-18Z.json  compliance_report_2025-12-18T23-46-30Z.json  compliance_report_2025-12-19T00-12-59Z.json  compliance_report_2025-12-30T20-05-30Z.json  compliance_report_2025-12-30T20-32-23Z.json  compliance_report_2025-12-30T20-43-11Z.json  compliance_report_2025-12-30T20-51-53Z.json  compliance_report_2025-12-30T21-21-02Z.json
crates/barbican-cli/: Cargo.toml
crates/barbican-cli/src/: config.rs  error.rs  main.rs  output.rs  profile.rs  validate.rs
crates/barbican-cli/src/generate/: mod.rs  nix.rs  rust.rs
docs/: API_REFERENCE.md  AUDIT_GUIDE.md  BARBICAN_COMPLIANCE_SUMMARY.md  CONFIGURATION_REFERENCE.md  DEVELOPMENT_MODE.md  INTEGRATION_GUIDE.md  KEYCLOAK_DEPLOYMENT_DESIGN.md  KEYCLOAK_USAGE_EXAMPLES.md  STIG_TRACEABILITY.md  TROUBLESHOOTING.md
examples/: generate_compliance_report.rs  generate_observability_stack.rs  stig_config_gen.rs  stig_loader.rs  verify_profiles.rs
examples/apps/: README.md
examples/apps/db-fedramp-high/: Cargo.toml  flake.nix  schema.sql
examples/apps/db-fedramp-high/src/: main.rs
examples/apps/db-fedramp-low/: .gitignore  Cargo.toml  flake.nix  schema.sql
examples/apps/db-fedramp-low/src/: main.rs
examples/apps/db-fedramp-moderate/: Cargo.toml  flake.nix  schema.sql
examples/apps/db-fedramp-moderate/src/: main.rs
examples/apps/db-minimal/: .gitignore  Cargo.toml  README.md  flake.nix  schema.sql
examples/apps/db-minimal/src/: main.rs
examples/fedramp-high/: Cargo.toml  README.md  barbican.toml  fedramp-high-example.qcow2  flake.nix  nix-result  vm-result
examples/fedramp-high/compliance-artifacts/: compliance_report_2025-12-30T20-21-41Z.json
examples/fedramp-high/secrets/: app-env.age  db-password.age  secrets.nix
examples/fedramp-high/src/: main.rs
examples/fedramp-low/: Cargo.toml  barbican.toml  flake.nix  result
examples/fedramp-low/src/: main.rs
examples/fedramp-moderate/: Cargo.toml  barbican.toml  flake.nix  result
examples/fedramp-moderate/src/: main.rs
examples/realistic-app/: Cargo.toml  README.md
examples/realistic-app/src/: config.rs  error.rs  main.rs
examples/realistic-app/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
examples/realistic-app/src/db/: mod.rs
examples/realistic-app/src/tasks/: handlers.rs  mod.rs  models.rs
nix/: apps.nix  checks.nix  devshell.nix  package.nix
nix/lib/: cluster-constraints.nix  cluster-images.nix  cluster-mkCluster.nix  cluster-orchestration.nix  cluster-resolver.nix  default.nix  isolation-boundaries.nix  keycloak-fapi.nix  keycloak-realm-json.nix  network-zones.nix  pki.nix  profile-meta.nix  systemd-hardening-lib.nix  topology-validator.nix  vault-pki.nix
nix/modules/: audit-archival.nix  cluster-output.nix  cluster.nix  database-backup.nix  default.nix  doctor.nix  ebs-recovery.nix  hardened-nginx.nix  hardened-ssh.nix  intrusion-detection.nix  kernel-hardening.nix  keycloak-vm.nix  log-forwarding.nix  mandatory-access-control.nix  observability-auth.nix  observability.nix  oidc-provider.nix  resource-limits.nix  secrets-management.nix  secure-postgres.nix  secure-users.nix  systemd-hardening.nix  time-sync.nix  usb-protection.nix  vault-pki.nix  vm-firewall.nix  vulnerability-scanning.nix
nix/profiles/: development.nix  fedramp-high.nix  fedramp-low.nix  fedramp-moderate.nix  hardened.nix  minimal.nix  standard.nix
nix/tests/: database-backup.nix  default.nix  hardened-nginx.nix  hardened-ssh.nix  intrusion-detection.nix  kernel-hardening.nix  resource-limits.nix  secure-postgres.nix  secure-users.nix  time-sync.nix  vault-pki.nix  vm-firewall.nix
src/: alerting.rs  app_config.rs  audit.rs  auth.rs  config.rs  crypto.rs  database.rs  encryption.rs  error.rs  health.rs  integration.rs  jwt_secret.rs  keys.rs  layers.rs  lib.rs  login.rs  parse.rs  password.rs  prelude.rs  rate_limit.rs  secrets.rs  session.rs  supply_chain.rs  testing.rs  tls.rs  validation.rs
src/audit/: integrity.rs  mod.rs
src/compliance/: artifacts.rs  config.rs  control_tests.rs  mod.rs  profile.rs  validation.rs
src/compliance-artifacts/: compliance_report_2025-12-17T23-32-40Z.json
src/compliance/stig/: control.rs  loader.rs  mappings.rs  mod.rs  rule.rs  types.rs  validator.rs
src/compliance/stig/config_gen/: error.rs  generator.rs  mod.rs  profile_parser.rs  registry.rs  toml_writer.rs  variable.rs  verify.rs
src/observability/: config.rs  events.rs  mod.rs  providers.rs
src/observability/metrics/: middleware.rs  mod.rs  prometheus.rs  registry.rs  router.rs  types.rs
src/observability/stack/: alerts.rs  compose.rs  fedramp.rs  grafana.rs  loki.rs  mod.rs  prometheus.rs  scripts.rs
templates/microvm-stack/: flake.nix
