[workspace]

[package]
name = "hello-fedramp-moderate"
version = "0.1.0"
edition = "2021"

[dependencies]
barbican = { path = "../..", features = ["postgres"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
