[package]
name = "db-fedramp-high"
version = "0.1.0"
edition = "2021"
description = "FedRAMP High baseline example - maximum database security"
license = "MIT"
publish = false

[features]
default = []
# Enable FIPS 140-3 validated cryptography (required for production FedRAMP High)
fips = ["barbican/fips"]

[dependencies]
# Barbican with all security features
barbican = { path = "../../..", features = ["postgres"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Web framework
axum = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID for record IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
